apply sonar recommendations